--- a/intro.html
+++ b/intro.html
@@ -1,6 +1,11 @@
 <!DOCTYPE html>
-<html>
+<html xmlns="http://www.w3.org/1999/html">
 <head>
+   <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Bootstrap demo</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+
   <title>Welcome Page</title>
   <style>
     body {
@@ -8,7 +13,7 @@
       background-color: #f0f0f0;
     }
    .container {
-      width: 80%;
+      width: 50%;
       margin: 40px auto;
       padding: 20px;
       border: 1px solid #ccc;
@@ -27,10 +32,13 @@
 </head>
 <body>
   <div class="container">
-    <h1>Welcome to Our Quiz!</h1>
-    <p>We're excited to have you take our quiz. Please click the button below to get started.</p>
-    <button onclick="window.location.href='authorization.html'">Get Started</button>
-    
+      <h1><center> Welcome to Our Quiz!</center></h1>
+    <p><center>We're excited to have you take our quiz. Please click the button below to get started.</center></p>
+
+    <p><center><button type="button" button onclick="window.location.href='authorization.html'" class="btn btn-outline-primary">Get Started</button></p></center>
+
+
   </div>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 </html>
