--- a/register.html
+++ b/register.html
@@ -1,50 +1,50 @@
 
 
+
+
 <!DOCTYPE html>
 <html>
 <head>
-    <meta charset="utf-8">
+<meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Bootstrap demo</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-  <title>Authorization Page</title>
+
+    <title>Registration Page</title>
   <style>
     body {
       font-family: Arial, sans-serif;
       background-color: #f0f0f0;
     }
-
-    .page {
-    height: 100vh;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    }
    .container {
       width: auto;
-      box-shadow: 15px 15px 15px rgba(100, 100, 100, 100);
-      height: auto;
-      margin: 40px auto;
+      margin: auto;
       padding: 20px;
       border: 1px solid #ccc;
-      border-radius: 15px;
+      border-radius: 10px;
       box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     }
-    .button {
+    button {
       background-color: #4CAF50;
       color: white;
       padding: 10px 15px;
-      border-weight: 1500px;
       border: none;
       border-radius: 5px;
       cursor: pointer;
     }
+.page {
+height: 100vh;
+display: flex;
+align-items: center;
+justify-content: center;
+}
+
   </style>
   <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 </head>
 <body class = "page">
   <div class="container">
-      <h1> <center> Let's sign in</center></h1>
+      <h1> <center> Register</center></h1>
       <p></p>
     <form id="auth-form"><center>
       <label for="username">Username</label>
@@ -53,55 +53,27 @@
 
       <label for="password">Password</label>
       <input type="password" id="password" name="password" style="border-left: solid; border-radius: 15px"> <i class='bx bxs-lock-alt' ></i><br><br>
-      <button type="submit" class="btn btn-outline-primary" style="border-radius: 15px">Login</button>
+      <button type="submit" class="btn btn-outline-primary" style="border-radius: 15px">Register</button>
+<p> </p>
+      
+      <p id="success-message"></p>
 
-    <p> Don't have an account? <a
-    href = "register.html">  Register</a></p>
-
-    </center></form>
+    </form>
     <p id="error-message"></p>
   </div>
 
 
-
   <script>
     const form = document.getElementById('auth-form');
-    const errorMessage = document.getElementById('error-message');
+    const successMessage = document.getElementById('success-message');
 
     form.addEventListener('submit', (e) => {
       e.preventDefault();
-      const username = document.getElementById('username').value;
-      const password = document.getElementById('password').value;
-
-
-      if (username === 'admin' && password === 'password') {
-        localStorage.setItem('authorized', true);
-        window.location.href = 'quiz.html';
-      } else {
-        errorMessage.textContent = 'Invalid username or password';
-      }
+      successMessage.textContent = 'Registration successful! You can now login';
     });
   </script>
-
-  <!-- <script>
-    const form = document.getElementById('auth-form');
-    const errorMessage = document.getElementById('error-message');
-
-    form.addEventListener('submit', (e) => {
-        e.preventDefault();
-        const username = document.getElementById('username').value;
-        const password = document.getElementById('password').value;
-        const users = JSON.parse(localStorage.getItem('users')) || {};
-
-        if (users[username] && users[username] === password) {
-            localStorage.setItem('authorized', true);
-            window.location.href = 'quiz.html'; // Redirect to the quiz page
-        } else {
-            errorMessage.textContent = 'Invalid username or password';
-        }
-    });
-  </script> -->
-
- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-  </body>
+  
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+ 
+</body>
 </html>
