--- a/authorization.html
+++ b/authorization.html
@@ -21,7 +21,7 @@
     justify-content: center;
     }
    .container {
-      width: 50%;
+      width: auto;
       box-shadow: 15px 15px 15px rgba(100, 100, 100, 100);
       height: auto;
       margin: 40px auto;
@@ -45,6 +45,7 @@
 <body class = "page">
   <div class="container">
       <h1> <center> Let's sign in</center></h1>
+      <p></p>
     <form id="auth-form"><center>
       <label for="username">Username</label>
 
@@ -58,7 +59,7 @@
     href = "register.html">  Register</a></p>
 
     </center></form>
-    <p id="error-message"></p>
+    <center><h5><b><p style = "color: #F80000" id="error-message"></p></b></h5></center>
   </div>
 
 
