--- a/authorization.html
+++ b/authorization.html
@@ -34,7 +34,8 @@
       background-color: #4CAF50;
       color: white;
       padding: 10px 15px;
-      border-weight: 1500px;
+/*       border-weight: 1500px; */
+      border-width: 1500px;
       border: none;
       border-radius: 5px;
       cursor: pointer;
