--- a/swp1.html
+++ b/swp1.html
@@ -318,7 +318,7 @@
         </section>
         <section id="double"></section>
         <section id="double"></section>
-    
+        <a href = "hrpage.html" class = "button3"style=" text-decoration: none"> Если вы HR</a>
     </main>
 </body>
 </html> 
