--- a/swp1.html
+++ b/swp1.html
@@ -311,7 +311,7 @@
                 </div>
                 
                 <div class = "par3">
-                    <b><center><b><b><a href="auth.html" class="button3" style="text-decoration: none">Send</a></b></b><center></b>
+                    <b><center><b><b><a href="quiz_new.html" class="button3" style="text-decoration: none">Send</a></b></b><center></b>
                 </div>
             </div>
             </div>
